force-app/main/default/objects/TaxGroup__c/TaxGroup__c.object-meta.xml
<CustomObject>
    <label>Tax Group</label>
    <nameField>
        <label>Tax Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>