force-app/main/default/objects/TaxGroup__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>The latest date for which the Tax Group applies.</description>
    <inlineHelpText>The latest date for which the Tax Group applies.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>