force-app/main/default/objects/TaxGroup__c/fields/InclusiveRates__c.field-meta.xml
<CustomField>
    <fullName>InclusiveRates__c</fullName>
    <description>NI USE ONLY - Used for calculating inclusive prices.</description>
    <inlineHelpText>NI USE ONLY - Used for calculating inclusive prices.</inlineHelpText>
    <label>Inclusive Rates</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>