force-app/main/default/objects/TaxGroup__c/fields/OccupancyTaxName1__c.field-meta.xml
<CustomField>
    <fullName>OccupancyTaxName1__c</fullName>
    <description>The Name of the tax as displayed in merge documents and reports.</description>
    <inlineHelpText>The Name of the tax as displayed in merge documents and reports.</inlineHelpText>
    <label>Occupancy Tax Name1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>