force-app/main/default/objects/TaxGroup__c/fields/OccupancyTaxRate10__c.field-meta.xml
<CustomField>
    <fullName>OccupancyTaxRate10__c</fullName>
    <description>The tax rate defined as a dollar amount.</description>
    <inlineHelpText>The tax rate defined as a dollar amount.</inlineHelpText>
    <label>Occupancy Tax Rate10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>