force-app/main/default/objects/TaxGroup__c/fields/OccupancyTaxRate2__c.field-meta.xml
<CustomField>
    <fullName>OccupancyTaxRate2__c</fullName>
    <description>The tax rate defined as a dollar amount.</description>
    <inlineHelpText>The tax rate defined as a dollar amount.</inlineHelpText>
    <label>Occupancy Tax Rate2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>