force-app/main/default/objects/TaxGroup__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>The earliest date for which the Tax Group applies.</description>
    <inlineHelpText>The earliest date for which the Tax Group applies.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>